# through_the_lens_drone_filming

./: README.md
Android/: build.gradle  settings.gradle
Android/app/: build.gradle  proguard-rules.pro
Android/app/src/androidTest/java/zhenyuyang/ucsb/edu/throughthelens/: ExampleInstrumentedTest.java
Android/app/src/main/: AndroidManifest.xml
Android/app/src/main/java/zhenyuyang/ucsb/edu/throughthelens/: DrawBoxView.java  MainActivity.java  ThroughTheLensActivity.java
Android/app/src/main/java/zhenyuyang/ucsb/edu/throughthelens/common/: DJIApplication.java
Android/app/src/main/java/zhenyuyang/ucsb/edu/throughthelens/gdx/: GameFragment.java  MyGdxGame2.java
Android/app/src/main/java/zhenyuyang/ucsb/edu/throughthelens/utils/: DJIModuleVerificationUtil.java
Android/app/src/main/res/drawable/: buttonstartrecording.xml
Android/app/src/main/res/layout/: activity_main.xml  activity_throught_the_lens.xml  content_main.xml
Android/app/src/main/res/menu/: menu_main.xml
Android/app/src/main/res/values/: colors.xml  strings.xml
Android/app/src/test/java/zhenyuyang/ucsb/edu/throughthelens/: ExampleUnitTest.java
Android/dJISDKLIB/: build.gradle
Android/gradle/wrapper/: gradle-wrapper.properties
through_the_lens_drone_filming/: CMakeLists.txt  package.xml
through_the_lens_drone_filming/launch/: extra_2d_pose.launch  through_the_lens_drone_filming.launch
through_the_lens_drone_filming/model/: model_weight_wot_120.ckpt.data-00000-of-00001  model_weight_wot_120.ckpt.index  model_weight_wot_140.ckpt.data-00000-of-00001  model_weight_wot_140.ckpt.index  model_weight_wot_160.ckpt.data-00000-of-00001  model_weight_wot_160.ckpt.index  model_weight_wot_180.ckpt.data-00000-of-00001  model_weight_wot_180.ckpt.index  model_weight_wot_200.ckpt.data-00000-of-00001  model_weight_wot_200.ckpt.index
through_the_lens_drone_filming/script/: map_3d.py  publish_waypoint.py  scale_estimation.py
through_the_lens_drone_filming/src/: control_cam.cpp  extra_2d_pose.cpp
